Add test coverage for TupleExpressionGenerator
Fix some copy/paste bugs in the return type interfaces.